# mgconfig

./: .bumpversion.cfg  .coverage  .gitignore  .readthedocs.yaml  LICENSE  README.md  config_logger.py  conftest.py  instructions mg.txt  license.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  test.json  test.py
config_defs/: basic_example.yaml  config_def_1_basic.yaml  config_def_2_intermediate.yaml  config_def_3_advanced.yaml  config_def_4_extended.yaml  config_def__app.yml  config_def__example.yml  config_def__test.yml  config_def__test_ext.yml  config_def_api.yml  config_def_filesystem.yml  config_def_secure_store.yaml
docs/: conf.py  doc_api.rst  doc_config_definition.rst  doc_configuration_yaml.rst  doc_example_usage.rst  doc_glossary.rst  doc_installation.rst  doc_introduction.rst  doc_known_bugs_and_limitations.rst  doc_secure_store.rst  doc_tips_and_hints.rst  doc_usage.rst  index.rst  requirements-docs.txt
docs/examples/: doc_config_def_1.rst  doc_config_def_2.rst  doc_config_def_3.rst  doc_example_2_intermediate.rst  index.rst
example_usage/: basic_example.py  example_0_install_verify.py  example_1_basic.py  example_2_intermediate.py  example_3_advanced.py  example_4_extended.py  example_config_test.py  example_installation_verification.py  example_secure_store.py  example_usage.py  example_usage_config.py  example_usage_ext.py  example_usage_secure_store.py  ext_app_header.py  ext_config_types.py  ext_default_functions.py  ext_postprocessing.py  run_all_examples.py  storage_analysis.py  storage_usage.py
mgconfig/: __init__.py  config_defs.py  config_item_handler.py  config_items.py  config_types.py  config_value.py  config_value_handler.py  config_values.py  configdef.py  configuration.py  extension_system.py  file_cache.py  helpers.py  key_provider.py  keystore.py  keystore_classes.py  keystores.py  requirements.txt  sec_store_crypt.py  sec_store_header.py  sec_store_helpers.py  secure_store.py  secure_store_helpers.py  value_store.py  value_stores.py
mgconfig.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mgconfig_package_mg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
other_files/: ara.py  filename.py  test.py  windows_fn_check.py
src/mgconfig/: __init__.py  _test_support.py  config_defs.py  config_key_map.py  configuration.py  file_cache.py  keystore_classes.py  requirements.txt  sec_store_header.py  singleton_meta.py
tests/: development.env  storage_usage.py  t_helpers.py  test_config_type.py  test_configdef.py  test_configuration.py  test_configuration_secure.py  test_key_provider.py  test_secure_store.py
tests/example_usage/: example_installation_verification.py  example_usage.py  ext_app_header.py  ext_config_types.py  ext_postprocessing.py
tests/module_tests/: test_mod_configdef.py  test_mod_secure_store.py  test_mod_secure_store_crypt.py  test_mod_secure_store_warn.py
tests/quicktests/: __init__.py  t_helpers.py  test_configdef.py  (+4 more)
(+125 files in other folders)
