[project]
name = "mgconfig"
version = "0.1.0"
description = "A flexible, robust and extensible configuration package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Moenus", email = "moenus@example.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/moenus/mgconfig"
Issues = "https://github.com/moenus/mgconfig/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "mgconfig/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'