[project]
name = "mgconfig"
version = "0.2.0"
description = "A flexible, robust and extensible configuration package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Moenus", email = "99176998+moenus@users.noreply.github.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/moenus/mgconfig"
Issues = "https://github.com/moenus/mgconfig/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
