[project]
name = "mgconfig"
version = "0.2.2-dev"
description = "A flexible, lightweight and declarative configuration system"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
authors = [
  { name = "Moenus", email = "99176998+moenus@users.noreply.github.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
tests = ["pytest"]

[project.urls]
Homepage = "https://github.com/moenus/mgconfig"
Issues = "https://github.com/moenus/mgconfig/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
